--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     font-family: sans-serif;
     display: grid;
     place-items: center;
+    font-size: 16px;
     min-height: 100vh;
     background-color: #f1f1f1;
 }
@@ -17,13 +18,24 @@ body{
     width: 100%;
     overflow: hidden;
     margin: 0 20px;
-    border: 5px solid white;
-    box-shadow: 0 0 2px black;
+}
+
+.grid-ctn{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+}
+
+img{
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 6px;
 }
 
 a{
     display: inline-block;
-    padding: 8px 24px;
+    padding: 8px 16px;
     border-radius: 30px;
     color: white;
     background-color: black;
@@ -32,13 +44,13 @@ a{
 }
 
 h1{
-    font-size: 24px;
     color: white;
     margin-bottom: 8px;
 }
 p{
     font-size: 14px;
     color: white;
+    text-align: justify;
 }
 
 .text-hidden{
@@ -49,24 +61,23 @@ p{
     height: 100%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
     opacity: 0;
+    pointer-events: none;
     transition: all 300ms linear;
 }
 
 section{
     width: 100%;
-    height: 250px;
     transition: transform 500ms linear;
     display: grid;
     place-items: center;
     position: relative;
-    z-index: 1;
 }
 section:nth-child(1){
     transform-origin: left top;
@@ -81,54 +92,40 @@ section:nth-child(4){
     transform-origin: right bottom;
 }
 
-input{
-    display: none;
-}
-label{
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0 ;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;    
-}
-
-section:nth-child(1):has(:checked){
+section:nth-child(1):hover{
     transform: scaleX(2.1) scaleY(2.1);
     z-index: 2;
 }  
-section:nth-child(2):has(:checked){
+section:nth-child(2):hover{
     transform: scaleX(2.1) scaleY(2.1);
     z-index: 2;
 } 
-section:nth-child(3):has(:checked){
+section:nth-child(3):hover{
     transform: scaleX(2.1) scaleY(2.1);
     z-index: 2;
 }
-section:nth-child(4):has(:checked){
+section:nth-child(4):hover{
     transform: scaleX(2.1) scaleY(2.1);
     z-index: 2;
 }
 
-input:checked ~ .text-hidden{
+section:hover > .text-hidden{
     opacity: 1;
+    pointer-events: all;
 }
 
-
-.grid-ctn{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
 
 
 @media screen and (max-width: 640px){
+    body{
+        padding: 24px;
+    }
     .grid-ctn{
         display: grid;
         grid-template-columns: 100%;
+        gap: 10px;
     }
-    section:has(:checked){
+    section:hover{
         transform: scale(1) !important;
         transform-origin: 50% 50%;
     }
